HelloUltraviolet/Fixtures/RejectedSource/FFI/CapabilityIsolationDiagnostics/Source/Main.uv
//! Rejected FFI specimen for capability-isolation diagnostics.

#export("C")
public procedure exportedCapability(value: Context) -> i32 {
    return 0
}
